@@ -7,6 +7,9 @@ CHANGES
 
 - Fixed Python2.7 compatibility in Browser.handleErrors.
 
+- Fixed LP #419119: return None when the browser has no contents instead of
+  raising an exception.
+
 - Fix tests on Python 2.7
 
 3.6.0a2 (2009-01-31)
